--- a/package.json
+++ b/package.json
@@ -48,7 +48,8 @@
     "js-yaml": "^4.0.0",
     "lodash": "^4.17.21",
     "mkdirp": "^1.0.3",
-    "node-fetch": "^2.6.1"
+    "node-fetch": "^2.6.1",
+    "swagger2openapi": "6.0.3"
   },
   "devDependencies": {
     "@types/ejs": "3.0.6",
