--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "lodash": "^4.17.21",
     "mkdirp": "^1.0.3",
     "node-fetch": "^2.6.1",
-    "swagger2openapi": "6.0.3"
+    "swagger2openapi": "7.0.3"
   },
   "devDependencies": {
     "@types/ejs": "3.0.6",
@@ -62,6 +62,7 @@
     "esbuild-jest": "0.5.0",
     "esbuild-node-tsc": "1.2.0",
     "jest": "26.6.3",
+    "openapi-types": "7.0.1",
     "typescript": "4.2.2"
   },
   "jest": {
