--- a/package.json
+++ b/package.json
@@ -29,8 +29,7 @@
     "dev": "etsc"
   },
   "files": [
-    "dist",
-    "templates"
+    "dist"
   ],
   "keywords": [
     "swagger",
@@ -72,11 +71,13 @@
     },
     "testPathIgnorePatterns": [
       "<rootDir>/node_modules/",
+      "<rootDir>/_old/",
       "<rootDir>/dist/"
     ],
     "testEnvironment": "node",
     "watchPathIgnorePatterns": [
       "<rootDir>/node_modules/",
+      "<rootDir>/_old/",
       "<rootDir>/dist/"
     ]
   }
