--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "swagger",
     "swagger 2.0",
     "openapi",
+    "openapi 3",
     "rest",
     "service",
     "typescript",
@@ -43,26 +44,24 @@
   "dependencies": {
     "chalk": "^3.0.0",
     "commander": "^7.1.0",
-    "ejs": "^3.1.6",
     "js-yaml": "^4.0.0",
     "lodash": "^4.17.21",
     "mkdirp": "^1.0.3",
     "node-fetch": "^2.6.1",
-    "swagger2openapi": "7.0.3"
+    "swagger2openapi": "^7.0.5"
   },
   "devDependencies": {
-    "@types/ejs": "3.0.6",
     "@types/jest": "26.0.20",
     "@types/js-yaml": "4.0.0",
     "@types/lodash": "4.14.168",
     "@types/mkdirp": "^1.0.1",
-    "@types/node": "14.14.31",
+    "@types/node": "14.14.32",
     "@types/node-fetch": "2.5.8",
     "esbuild-jest": "0.5.0",
     "esbuild-node-tsc": "1.2.0",
     "jest": "26.6.3",
-    "openapi-types": "7.0.1",
-    "typescript": "4.2.2"
+    "openapi-types": "7.2.3",
+    "typescript": "4.2.3"
   },
   "jest": {
     "testRegex": "\\.(test|spec)\\.tsx?$",
